--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
   margin-top: 32px;
 }
 
-#gameboard {
+#game-board {
   flex: 4;
   display: flex;
   flex-direction: row;
@@ -83,22 +83,20 @@ body {
   font-size: 3rem;
 }
 
-#gameboard .box {
+#game-board .box {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: hsl(0, 5%, 70%);
 }
 
-#gameboard .box img {
+#game-board .box img {
   width: 70%;
   height: 70%;
 }
 
 #buttons {
   flex: 1;
-  width: 35%;
-  margin: 0 auto;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -106,8 +104,8 @@ body {
 }
 
 #restart {
-  width: 20%;
-  height: 30%;
+  flex: 1;
+  width: 250px;
   text-align: center;
 }
 
@@ -125,7 +123,7 @@ button:hover {
 }
 
 button:active {
-  background: red;
+  background: rgba(160, 158, 158, 0.5);
 }
 
 
